--- a/curriculo_html/style.css
+++ b/curriculo_html/style.css
@@ -1,7 +1,50 @@
-.esqu {
-    display: flex;
+.line {
+    line-height: 0.4;
+
 }
 
-.espaco {
-    margin-right: 20px;
+.line2 {
+    line-height: 0;
+}
+
+.marge {
+    margin-top: 50px;
+}
+
+.marg {
+    margin-top: 100px;
+    margin-left: 300px;
+    margin-right: 100px;
+    margin-bottom: 50px;
+}
+
+.quebra {
+    height: 3px;
+    width: 830px;
+    background-color: blue;
+    margin-left: 2px;
+}
+
+h2 {
+    font-family: 'Times New Roman';
+    font-style: italic;
+    font-weight: bold;
+}
+
+h3 {
+    font-family: Arial;
+    font-style: italic;
+    font-size: 18px;
+}
+
+a {
+    font-weight: 400;
+}
+
+h4 {
+    font-family: Arial;
+    font-style: normal;
+    font-size: 18px;
+    font-weight: lighter;
+    margin-top: 0px;
 }
