--- a/curriculo_html/style.css
+++ b/curriculo_html/style.css
@@ -16,8 +16,11 @@
 
 
 body {
-    padding-left: 500px;
-    padding-top: 100px;
+    display: block;
+    margin-left: 300px;
+    margin-right: 300px;
+    margin-top: 100px;
+    margin-bottom: 100px;
     width: 892px;
     height: 1132px;
 }
