--- a/curriculo_html/style.css
+++ b/curriculo_html/style.css
@@ -4,8 +4,8 @@
 }
 @media screen and (max-width: 1080px){
     .container {
-        flex-wrap: nowrap;
         width: 100%;
+        flex-direction: column;
     }
 }   
 .container {
