--- a/curriculo_html/style.css
+++ b/curriculo_html/style.css
@@ -16,18 +16,17 @@
 
 
 body {
-    display: block;
+    display: flex;
     margin-left: 300px;
     margin-right: 300px;
     margin-top: 100px;
     margin-bottom: 100px;
-    width: 892px;
-    height: 1132px;
+    width: 900px;
 }
 
 .marge {
     margin-top: 60px;
-    width: 870px;
+    width: 815px;
 }
 
 .marg {
