--- a/curriculo_html/style.css
+++ b/curriculo_html/style.css
@@ -17,11 +17,8 @@
 
 body {
     display: flex;
-    margin-left: 300px;
-    margin-right: 300px;
-    margin-top: 100px;
-    margin-bottom: 100px;
-    width: 900px;
+    margin: auto;
+    padding: 100px;
 }
 
 .marge {
