--- a/receita_html/style.css
+++ b/receita_html/style.css
@@ -23,9 +23,8 @@ img {
 }
 
 h1 {
-    font-size: 45px;
-    font-family: 'Courier New', Courier, monospace;
-    font-family: bodoni;
+    font-size: 42px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 .back {
