--- a/receita_html/style.css
+++ b/receita_html/style.css
@@ -5,7 +5,7 @@ body {
 
 img {
     border-radius: 15px;
-    width: 680px;
+    width: 690px;
     height: 380px;
     margin: auto;
 }
@@ -20,7 +20,8 @@ img {
 
 .marg {
     text-align: left;
-    padding-left: 60px;
+    padding-left: 55px;
+    padding-right: 55px;
 }
 
 h1 {
@@ -42,4 +43,10 @@ h1 {
 
 h4 {
     font-weight: lighter;
+}
+
+.intern {
+    text-align: center;
+    background-color: rgb(255, 241, 251);
+    border-radius: 15px;
 }
