--- a/receita_html/style.css
+++ b/receita_html/style.css
@@ -1,6 +1,8 @@
 body {
     background-color: rgba(255, 245, 228, 0.86);
     display: block;
+    margin: auto;
+    text-align: left;
 }
 
 img {
@@ -26,27 +28,43 @@ img {
 
 h1 {
     font-family: 'Monomakh';
-    font-size: 38px;
+    font-size: 35px;
     font-weight: 400px;
     font-style: normal;
+    margin-bottom: 10px;
 }
 
 .back {
-    margin-left: 340px;
-    margin-right: 300px;
-    margin-top: 100px;
-    margin-bottom: 100px;
+    margin: auto;
     width: 800px;
     height: 3000px;
     text-align: center;
+    padding-top: 100px;
+    padding-bottom: 100px;
 }
 
 h4 {
     font-weight: lighter;
+    font-size: 18px;
+    margin-top: 15px;
+    margin-bottom: 25px;
 }
 
 .intern {
-    text-align: center;
-    background-color: rgb(255, 241, 251);
+    text-align: left;
+    background-color: rgb(255, 246, 252);
     border-radius: 15px;
+    padding: 10px;
+    padding-left: 30px;
+    padding-bottom: 20px;
+}
+
+ul {
+    font-size: 18px;
+    line-height: 1.2;
+    font-weight: bold;
+}
+
+span {
+    font-weight: lighter;
 }
