--- a/receita_html/style.css
+++ b/receita_html/style.css
@@ -1,3 +1,5 @@
+
+
 body {
     background-color: rgba(255, 245, 228, 0.86);
     display: block;
@@ -15,7 +17,7 @@ img {
 .margem {
     text-align: center;
     width: 800px;
-    height: 2800px;
+    height: 2300px;
     background-color: rgb(255, 255, 255);
     border-radius: 35px;
 }
@@ -27,18 +29,18 @@ img {
 }
 
 h1 {
-    font-family: 'Monomakh';
-    font-size: 35px;
+    font-family: 'Monomakh', cursive;
+    font-size: 40px;
     font-weight: 400px;
     font-style: normal;
     margin-bottom: 10px;
+    color: rgb(54, 54, 54);
 }
 
 .back {
     margin: auto;
     width: 800px;
     height: 3000px;
-    text-align: center;
     padding-top: 100px;
     padding-bottom: 100px;
 }
@@ -48,6 +50,7 @@ h4 {
     font-size: 19px;
     margin-top: 15px;
     margin-bottom: 25px;
+    color: rgb(65, 65, 65);
 }
 
 .intern {
@@ -59,23 +62,68 @@ h4 {
     padding-bottom: 10px;
 }
 
-.pr {
-    font-size: 18px;
-    line-height: 1.9;
-    font-weight: bold;
-    color: rgb(65, 65, 65);
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
-}
-
 span {
     font-weight: lighter;
+    font-size: 18px;
+    color: rgb(85, 85, 85);
 }
 
 ul {
     padding-left: 25px;
+    color: rgb(83, 83, 83);
+    font-size: 18px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-h2 {
-    color: rgb(141, 82, 27);
-    font-size: 26px;
+li {
+    line-height: 35px;
+}
+
+.p1 {
+    font-weight: bold;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: rgb(143, 52, 75);
+    font-size: 16px;
+    line-height: 0.3;
+}
+
+.p2 {
+    font-family: 'Monomakh', cursive;
+    color: rgb(129, 77, 28);
+    font-size: 21px;
+}
+
+.p3 {
+    color: rgb(83, 83, 83);
+}
+
+.p4 {
+    font-size: 14px;
+}
+
+.p5 {
+    color: rgb(85, 85, 85);
+    font-size: 17px;
+    font-family: Arial, Helvetica, sans-serif;
+} 
+
+.quebra {
+    opacity: 30%;
+}
+
+ol {
+    padding-left: 25px;
+    color: rgb(83, 83, 83);
+    font-size: 17px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.p6 {
+    padding-left: 24px;
+}
+
+.p7 {
+    padding-left: 250px;
+    color: rgb(129, 77, 28); 
+    font-weight: bold;
 }
