--- a/receita_html/style.css
+++ b/receita_html/style.css
@@ -1,4 +1,14 @@
-
+@media screen and (max-width: 1080px){
+    .container {
+        width: 100%;
+        flex-direction: column;
+    }
+}   
+.container {
+     display: flex;
+     width: 100%;
+     justify-content: space-around;
+}
 
 body {
     background-color: rgba(255, 245, 228, 0.86);
@@ -40,7 +50,7 @@ h1 {
 .back {
     margin: auto;
     width: 800px;
-    height: 3000px;
+    height: 2500px;
     padding-top: 100px;
     padding-bottom: 100px;
 }
