--- a/perfil_html/style.css
+++ b/perfil_html/style.css
@@ -1,14 +1,50 @@
 body {
     background-color: black;
     margin: auto;
+    padding-top: 100px;
+    padding-bottom: 100px;
+    text-align: center;
 }
 
 .back {
-    padding-top: 60px;
+    padding-top: 58px;
     margin: auto;
     text-align: center;
-    width: 400px;
-    height: 500px;
-    background-color: rgb(28, 28, 28);
-    border-radius: 15px;
+    width: 450px;
+    height: 650px;
+    background-color: rgb(25, 25, 25);
+    border-radius: 10px;
+}
+
+.p1 {
+    margin-bottom: 5px;
+    font-size: small;
+    color: white;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
+}
+
+.p2 {
+    margin-top: 5px;
+    color: yellow;
+    font-size: small;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+.p3 {
+    font-size: smaller;
+    color: rgb(255, 255, 255);
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.b1 {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin: auto;
+    background-color: rgb(48, 48, 48);
+    width: 350px;
+    height: 55px;
+    color: white;
+    border-radius: 10px;
+    font-size: 13px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
