--- a/perfil_html/style.css
+++ b/perfil_html/style.css
@@ -31,6 +31,8 @@ body {
 }
 
 .p3 {
+    margin-top: 10px;
+    margin-bottom: 16px;
     font-size: smaller;
     color: rgb(255, 255, 255);
     font-family: Arial, Helvetica, sans-serif;
