--- a/faq_html/style.css
+++ b/faq_html/style.css
@@ -11,14 +11,14 @@ body {
 
 .p1 {
     margin: auto;
-    width: 600px;
-    height: 600px;
+    width: 570px;
+    height: 500px;
     background-color: white;
     border-radius: 18px;
 }
 
 .p2 {
-    background-color: rgb(50, 0, 73);
+    background-color: rgb(53, 5, 63);
     width: 1500px;
     height: 250px;
     
@@ -26,4 +26,9 @@ body {
 
 .p3 {
     margin-top: 120px;
+    text-align:;
+    color: rgb(42, 4, 50);
+    font-weight: bold;
+    font-size: 50px;
+    font-family:'Gill Sans', sans-serif
 }
