--- a/faq_html/style.css
+++ b/faq_html/style.css
@@ -9,21 +9,21 @@ body {
     margin: auto;
 }
 
-.p1 {
+.caixa {
     margin: auto;
     padding-left: 40px;
-    margin-top: 100px;
+    margin-top: 150px;
     width: 570px;
-    height: 550px;
+    height: 580px;
     background-color: white;
     border-radius: 18px;
 }
 
-.p2 {
-    background-color: rgb(53, 5, 63);
+.fundo {
+    background-image: url(./fundo1.jpg);
     margin-bottom: 550px;
     width: 1500px;
-    height: 270px;
+    height: 320px;
 }
 
 .p3 {
@@ -35,16 +35,42 @@ body {
     font-family:Verdana, Geneva, Tahoma, sans-serif
 }
 
-.p4 {
+.star {
     width: 7%;
     height: 7%;
     padding-top: 55px;
 }
 
+.p4 {
+    text-align: left;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: rgb(147, 147, 147);
+    padding-right: 20px;
+    line-height: 25px;
+    margin-top: 25px;
+    
+}
+
 .p5 {
     color: rgb(42, 4, 50); 
-    margin-top: 40px;
+    margin-top: 35px;
     font-weight: bold;
     font-size: medium;
-    font-family:Verdana, Geneva, Tahoma, sans-serif
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    display: inline-flex;
+    margin-bottom: 0;
+}
+
+.quebra {
+    width: 500px;
+    margin-left: 0;
+    margin-top: 30px;
+    opacity: 30%;
+    margin-bottom: 1px;
+}
+
+.icon1 {
+    src: url(./remove-circle.svg);
+    width: 6%;
+    display: inline-flex;
 }
