--- a/flex_e_media/style.css
+++ b/flex_e_media/style.css
@@ -11,12 +11,6 @@
     background-color: white;
     width: 100%;
 }
-.container1 {
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 2px;
-}
 
 body {
     font-style: italic;
@@ -40,7 +34,15 @@ body {
 .sidebar {
     text-align: center;
     width: 20%;
+    height: 70vh;
     background-color: rgb(255, 190, 111);
+}
+
+.container1 {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 2px;
 }
 
 .partes {
@@ -61,24 +63,59 @@ body {
     background-color: rgb(88, 244, 77);
 }
 
-/* Desktop */
-@media screen and (max-width: 1028px) {
-    .container {
-        flex-direction: row;
-    }
-}
+
 
 /* Tablet */
-@media screen and (min-width: 768px) and (max-width: 1027px) {
+@media screen and (min-width: 450px) and (max-width: 768px) {
     .container {
         flex-direction: row;
         flex-wrap: wrap;
     }
+
+    .conteudo {
+        width: 100%;
+        height: 57.5vh;
+    }
+    .sidebar {
+        width: 100%;
+        height: 20vh;
+    }
+
+    .partes {
+        width: 100%;
+        height: 5vh;
+    }
+
+    .partes:nth-child(1) {
+        order: 2;
+        width: 25%;
+    }
+    .partes:nth-child(3) {
+        order: 3;
+        width: 25%;
+    }
 }
 
 /* Celular */
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 449px) {
     .container {
         flex-direction: column;
+        flex-wrap: wrap;
     }
+
+    .conteudo {
+        width: 100%;
+        height: 57.5vh;
+    }
+    .sidebar {
+        width: 100%;
+        height: 20vh;
+    }
+
+    .partes {
+        width: 100%;
+        height: 3.3vh;
+    }
+
+
 }
